# csd_bg_free_float_extractor

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  MacOs.BUILD.md  Makefile  README.md  Synology.md  build.sh  docker-compose.yml  explore-container.sh  pyproject.toml  requirements.txt  run-tests.sh  setup.py
src/csd_bg_free_float_extractor/: __init__.py  __main__.py  cli.py  constants.py  main.py
src/csd_bg_free_float_extractor/extractor/: __init__.py  parser.py  processor.py  utils.py
src/csd_bg_free_float_extractor/watcher/: __init__.py  handler.py
tests/: __init__.py  test_cli.py  test_parser.py  test_processor.py
