[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.coverage.run]
source = ["csd_bg_free_float_extractor"]
omit = ["tests/*", "*/tests/*"]